--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>ES6-webpack-starter</title>
-</head>
-<body>
-  <div id="app"></div>
-</body>
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Go game</title>
+  </head>
+  <body>
+    <div id="board">
+    </div>
+    <div id="app"></div>
+  </body>
 </html>
-
